--- a/ewald/README
+++ b/ewald/README
@@ -1,1 +1,5 @@
 Ewald sum and its application in computing the Madelung constant
+
+
+ew3.c and madelung.c      Binding energy of NaCl
+ion.c                     Energy of a single ion in a uniform plasma of opposite charge
