--- a/mkspx/README
+++ b/mkspx/README
@@ -1,5 +1,17 @@
 TODO:
-* one-letter sequence
 * better terminal
 * CHARMM/AMBER output
+* print dimension and center
+* draw x,y,z axes
+* input box dimension
 * simplify the unnecessary Javascripts
+
+package require psfgen
+topology top_all27_prot_lipid.inp
+pdbalias residue HIS HSE
+pdbalias atom ILE CD1 CD
+segment U {pdb out0.pdb}
+coordpdb out0.pdb U
+guesscoord
+writepdb out.pdb
+writepsf out.psf
