mie: edit mie.tex

--- a/mie/doc/simul.bib
+++ b/mie/doc/simul.bib
@@ -3002,3 +3002,50 @@
   doi = {10.1063/1.477973}
 }
 
+@article{kirkwood1935,
+  author = {John G. Kirkwood},
+  title = {Statistical Mechanics of Fluid Mixtures},
+  journal = {The Journal of Chemical Physics},
+  volume = {3},
+  number = {5},
+  pages = {300-313},
+  year = {1935},
+  doi = {10.1063/1.1749657}
+}
+
+@Article{mcgill1954,
+  author="McGill, William J.",
+  title="Multivariate information transmission",
+  journal="Psychometrika",
+  year="1954",
+  month="Jun",
+  day="01",
+  volume="19",
+  number="2",
+  pages="97--116",
+  abstract="A multivariate analysis based on transmitted information is presented. It is shown that sample transmitted information provides a simple method for measuring and testing association in multi-dimensional contingency tables. Relations with analysis of variance are pointed out, and statistical tests are described.",
+  issn="1860-0980",
+  doi="10.1007/BF02289159",
+  url="https://doi.org/10.1007/BF02289159"
+}
+
+
+@inproceedings{bjorklund2007,
+  author = {Bj\"{o}rklund, Andreas and Husfeldt, Thore and Kaski, Petteri and Koivisto, Mikko},
+  title = {Fourier Meets M\"{o}bius: Fast Subset Convolution},
+  booktitle = {Proceedings of the Thirty-ninth Annual ACM Symposium on Theory of Computing},
+  series = {STOC '07},
+  year = {2007},
+  isbn = {978-1-59593-631-8},
+  location = {San Diego, California, USA},
+  pages = {67--74},
+  numpages = {8},
+  url = {http://doi.acm.org/10.1145/1250790.1250801},
+  doi = {10.1145/1250790.1250801},
+  acmid = {1250801},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {M\"{o}bius transform, Steiner tree, convolution},
+}
+
+
