--- a/mie/doc/mie.tex
+++ b/mie/doc/mie.tex
@@ -1,4 +1,4 @@
-\documentclass[reprint, superscriptaddress]{revtex4-1}
+\documentclass[preprint, superscriptaddress]{revtex4-1}
 
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -68,7 +68,7 @@ we show that the magnitude of the bias can grow rapidly with the order of the ex
 \section{Introduction}
 
 Entropy is a key concept of statistical mechanics that provides a quantitative measure of
-the number of possible states a system can go through during its time evolution.
+the number of possible states a system can go through during its evolution.
 %
 In particular, the configuration entropy is defined,
 for $M$ coarse-grained states in the configuration space, as
@@ -76,15 +76,15 @@ for $M$ coarse-grained states in the configuration space, as
 \begin{equation}
   S
   \equiv
-  -k_B \sum_{i = 1}^M p_i \, \ln p_i
+  -k_B \sum_{\alpha = 1}^M p(\alpha) \, \ln p(\alpha)
   ,
   \label{eq:entropy_def}
 \end{equation}
 %
-where $p_i$ is the probability of discrete state $i = 1, \dots, M$,
+where $p(\alpha)$ is the probability of discrete state $\alpha = 1, \dots, M$,
 and $k_B$ is the Boltzmann constant.
 %
-For the even distribution, $p_i \equiv 1/M$,
+For the even distribution, $p(\alpha) \equiv 1/M$,
 we can readily verify that $S \equiv k_B \, \ln M$
 is proportional to the logarithm of the number of states.
 
@@ -94,7 +94,7 @@ with the probabilities estimated from the observed occurrences of the states.
 %
 Among the many methods for estimation of the configuration entropy based on this principle
 the method of mutual information expansion (MIE) is a notable example
-that can potentially handle a vast state spaces of a complex system.
+that can potentially handle a vast state space of a complex system.
 %
 The MIE method applies to a many-body system
  whose state space is decomposable to a direct product of individual component spaces.
@@ -105,8 +105,8 @@ that gradually take into account higher-order correlations
 of pairs, triples, quadruples, etc.
 
 However, a common drawback of the above counting-based methods is that
-they tend to underestimate the configuration entropy for finite samples
-derived from realistic simulations.
+they tend to underestimate the configuration entropy for a finite sample
+derived from a realistic simulation.
 %
 Thus, it is useful to understand the variance of this estimation bias with the sample size.
 %
@@ -125,40 +125,45 @@ by imposing some restrictions to the higher-order tuples included.
 
 \section{Method}
 
-\subsection{Estimation bias in direct counting}
+\subsection{Finite-size bias in the direct counting method}
 
-We will first discuss the estimation bias
-of directly using Eq. \eqref{eq:entropy_def} for a finite trajectory.
+We will first discuss the finite-size bias associated with
+the direct application of Eq. \eqref{eq:entropy_def},
+which will be referred to as the direct counting method below.
 %
-In this estimation, we replace the probability $p_i$
-by the frequency, $f_i = n_i / t$,
-where $n_i$ is the number of times state $i$ occurring in the trajectory of $t$ steps,
+Here, we estimate the probability $p(\alpha)$
+by the frequency, $f(\alpha) = n(\alpha) / t$,
+where $n(\alpha)$ is the number of times state $\alpha$ occurring in the trajectory of $t$ steps,
 and
 %
 \begin{equation}
   \hat S
   =
-  -k_B \sum_{i = 1}^M f_i \, \ln f_i
+  -k_B \sum_{\alpha = 1}^M f(\alpha) \, \ln f(\alpha)
   .
   \label{eq:entropy_est}
 \end{equation}
 %
-To discuss the error,
+To facilitate the discussion on error,
 we will imagine an ensemble of trajectories of replica systems
 under the same condition but different random forces
-so that we can define the bias from the difference
-between the ensemble average, $\langle \hat S \rangle$
+and define the bias from the difference
+between the ensemble average,
+$\langle \hat S \rangle$
 and the true value, $S$.
 %
-By the series expansion of $f_i$ around $p_i$, we have
+By the series expansion of $f(\alpha)$ around $p(\alpha)$, we have
 %
 \begin{align*}
   \hat S
   =
-  S - k_B \sum_{i = 1}^M \left[
-    (\ln p_i + 1) (f_i - p_i)
-    + \frac{ (f_i - p_i)^2 } { 2 \, p_i }
-  \right]
+  S
+  &- k_B \sum_{\alpha = 1}^M
+    \bigl[\ln p(\alpha) + 1 \bigr]
+    \bigl[ f(\alpha) - p(\alpha) \bigr]
+  \\
+  &- k_B \sum_{\alpha = 1}^M
+    \frac{ \bigl[f(\alpha) - p(\alpha)\bigr]^2 } { 2 \, p(\alpha) }
   .
   %\label{eq:Shat_series}
 \end{align*}
@@ -175,51 +180,55 @@ around $x_0$,
 }
 %
 Assuming the sampling is unbiased,
-we should have $\langle f_i \rangle = p_i$.
+we have $\langle f(\alpha) \rangle = p(\alpha)$.
 %
 Thus, after ensemble averaging, we get
 %
 \begin{align*}
   \langle \hat S \rangle
   \approx
-  S - k_B \sum_{i = 1}^M
-    \frac{ \operatorname{var} (f_i) } { 2 \, p_i }
+  S - k_B \sum_{\alpha = 1}^M
+    \frac{ \operatorname{var} f(\alpha) } { 2 \, p(\alpha) }
   =
-  S - k_B \sum_{i = 1}^M
-    \frac{ \operatorname{var} (n_i) } { 2 \, p_i \, t^2 }
+  S - k_B \sum_{\alpha = 1}^M
+    \frac{ \operatorname{var} n(\alpha) } { 2 \, p(\alpha) \, t^2 }
   .
   %\label{eq:Shat_series}
 \end{align*}
 
 By definition, we have
-$$n_i = \sum_{t' = 1}^t \delta_{i, i(t')},$$
-where $i(t')$ denotes the state at step $t'$,
-and $\delta_{i, j}$ is the Kronecker delta,
-which takes the value of $1$ if $i = j$, or $0$ otherwise.
+$$n(\alpha) = \sum_{t' = 1}^t \delta_{\alpha, \alpha(t')},$$
+where $\alpha(t')$ denotes the state at step $t'$,
+and $\delta_{\alpha, \gamma}$ is the Kronecker delta,
+which takes the value of $1$ if $\alpha = \gamma$, or $0$ otherwise.
 %
 We can readily show that
 \begin{align*}
-  \langle n_i \rangle
+  \langle n(\alpha) \rangle
   &=
-  t \, p_i, \\
-  \operatorname{var}{n_i}
+  t \, p(\alpha), \\
+  \operatorname{var}{n(\alpha)}
   &=
-  \left\langle n_i^2 \right\rangle - \langle n_i \rangle^2
-  =
-  t \, p_i \, (1 - p_i) \, (2 \, \tau_{i} + 1)
+  \left\langle n(\alpha)^2 \right\rangle - \langle n(\alpha) \rangle^2
+  \\
+  &=
+  t \, p(\alpha) \, \bigl( 1 - p(\alpha) \bigr) \, \bigl(2 \, \tau_\alpha + 1\bigr)
   ,
 \end{align*}
 %
-where $\tau_i$ is the integral autocorrelation time of $\delta_{i, i(t)}$,
-defined as $\tau_i = \sum_{t = 1}^\infty \kappa_i(t)/\kappa_i(0)$,
+where $\tau_\alpha$ is the integral autocorrelation time of $\delta_{\alpha, \alpha(t)}$,
+defined as $\tau_\alpha = \sum_{t = 1}^\infty \kappa_\alpha(t)/\kappa_\alpha(0)$,
 with the autocorrelation function given by
-$\kappa(t) = (\delta_{i, i(t)} - p_i) (\delta_{i, i(0)} - p_i)$.
+$$
+\kappa_\alpha(t) = \bigl(\delta_{\alpha, \alpha(t)} - p(\alpha)\bigr)
+\bigl(\delta_{\alpha, \alpha(0)} - p(\alpha)\bigr).
+$$
 
 \begin{align*}
   \langle \hat S \rangle
   &\approx
-  S - k_B \sum_{i = 1}^M
-    \frac{ (1 - p_i) ( 2 \, \tau_i + 1) } { 2 \, t }
+  S - k_B \sum_{\alpha = 1}^M
+    \frac{ \bigl(1 - p(\alpha)\bigr) ( 2 \, \tau_\alpha + 1) } { 2 \, t }
   \\
   &\approx
   S - k_B
@@ -230,8 +239,216 @@ $\kappa(t) = (\delta_{i, i(t)} - p_i) (\delta_{i, i(0)} - p_i)$.
 where in the second step,
 we have assumed that all integral autocorrelation time are the same.
 
-This result shows that the entropy estimated from direct counting
+This result shows that the entropy estimated
+from the direct counting method
 is expected to carry a negative bias
 that is inversely proportional to the trajectory length.
+%
+As we will see, the same type of bias also exists
+in more elaborate entropy-estimation methods
+such as the MIE method.
 
+
+\subsection{Kirkwood superposition approximation}
+
+
+The direct counting method breaks down
+for a complex system of many states,
+because as the number of states increases,
+the diminishing number of samples collected in each state
+can readily deteriorate the precision of the entropy estimate.
+%
+For these many-body systems,
+we may alternatively adopt
+the mutual information expansion (MIE) method,
+which is an approximate method designed for a system
+with many largely-independent degrees of freedom.
+%
+The MIE method is based on the idea of
+the Kirkwood superposition approximation (KAS)\cite{kirkwood1935},
+or that of interaction information\cite{mcgill1954},
+which we will briefly review below.
+
+We first recall that the (dimensionless) potential of mean force (PMF)
+is defined for a distribution, $p(\alpha)$,
+as
+$$
+W(\alpha) = \ln\left[ \frac{1}{p(\alpha)} \right].
+$$
+The PMF can be interpreted as the amount of work
+(in the unit of $k_B \, T$, with $T$ being the temperature)
+required to commit an average system randomly drawn from ensemble of unknown state (of probability $1$)
+to state $\alpha$ (of probability $p(\alpha)$).
+%
+We will refer to this work as the work of ensemble restriction (WES) below.
+%
+We can now rewrite Eq. \eqref{eq:entropy_def} as
+%
+\begin{equation}
+  S =
+  \sum_{\alpha = 1}^M p(\alpha) \, W(\alpha)
+  =
+  \overline{ W(\alpha) }
+  ,
+\end{equation}
+%
+which shows that the configuration entropy
+is the mean WES.
+%
+For a thermodynamic system,
+we might expect the WES to be decomposable to
+the work of individual degrees of freedom plus some correlation.
+%
+The Kirkwood superposition approximation is based on this intuition.
+
+Consider a many-body system with many component degrees of freedom.
+%
+We will label the degrees of freedom by $i$, $j$, \dots,
+and for a state $\alpha$,
+we will denote the corresponding components by
+$\alpha_i$, $\alpha_j$, \dots.
+%
+%For simplicity, we will assume that the degrees of freedom are identical.
+%
+For a set of degrees of freedom, $I = \{i, j, \dots\}$,
+we denote the marginal joint distribution by $p_I(\alpha_I)$,
+and define the joint PMF as $W_I(\alpha_I) = -\ln p_I(\alpha_I)$.
+%
+For example,
+the marginal PMF of a single degree of freedom $i$ is given by $W_i$ (omitting the argument),
+that of a pair $\{i, j\}$ by $W_{i, j}$,
+that of a triplet $\{i, j, k\}$ by $W_{i, j, k}$, etc.
+
+Now by assuming that the components are largely independent,
+we would expect that the PMF of a pair $\{i, j\}$
+is the sum of the PMFs of the two individual components $i$ and $j$
+and a two-body correction, $\delta W_{i,j}$,
+%
+\begin{equation}
+  W_{i,j}(\alpha_i, \alpha_j)
+  =
+  W_i(\alpha_i) + W_j(\alpha_j)
+  + \delta W_{i,j}(\alpha_i, \alpha_j)
+  .
+  \label{eq:W_ij}
+\end{equation}
+%
+Similarly, for a triplet, $\{i, j, k\}$,
+we can define the correction, $\delta W_{i,j,k}$ via
+%
+\begin{align}
+  &W_{i,j,k}(\alpha_i, \alpha_j, \alpha_k)
+  =
+  W_i(\alpha_i) + W_j(\alpha_j) + W_k(\alpha_k)
+  \notag \\
+  &\quad
+  + \delta W_{i,j}(\alpha_i, \alpha_j)
+  + \delta W_{j,k}(\alpha_j, \alpha_k)
+  + \delta W_{k,i}(\alpha_k, \alpha_i)
+  \notag \\
+  &\quad
+  + \delta W_{i,j,k}(\alpha_i, \alpha_j, \alpha_k)
+  .
+  \label{eq:W_ijk}
+\end{align}
+%
+
+
+Generally, we can define the PMF correction, $\delta W_I$,
+for an arbitrary set of components, $I$,
+implicitly through the recurrence relation,
+%
+\begin{equation}
+  W_I(\alpha_I)
+  =
+  \sum_{J \subseteq I}
+  \delta W_J(\alpha_J)
+  ,
+  \label{eq:WI_dWJ}
+\end{equation}
+%
+where the sum goes through all subsets $J$'s of $I$,
+and we have defined
+$\delta W_\emptyset \equiv W_\emptyset \equiv 0$.
+%
+Note that in this definition,
+$\delta W_i \equiv W_i$
+for a single component $i$.
+%
+We can readily verify that
+Eqs. \eqref{eq:W_ij} and \eqref{eq:W_ijk}
+are special cases of Eq. \eqref{eq:WI_dWJ}
+
+Without a priori assumption on the magnitudes of the corrections,
+Eq. \eqref{eq:WI_dWJ} is an exact relation
+that serves only as the mathematical definition of $\delta W_I$.
+%
+However, its practical value lies in that in many cases
+with nearly independent components,
+we can often assume, approximately,
+that the corrections of larger subsets are negligible
+so that a many-component PMF can be constructed
+from a few low-order ones.
+
+Since Eq. \eqref{eq:WI_dWJ} is a linear relation,
+we can invert it to get an explicit definition of $\delta W_I$
+through the inverse M\"{o}bius transform\cite{bjorklund2007},
+\begin{equation}
+  \delta W_I =
+  \sum_{J \subseteq I}
+  (-1)^{|I| - |J|}
+  W_J
+  ,
+  \label{eq:dWI_WJ}
+\end{equation}
+%
+where $|I|$ denote the size of set $I$.
+
+We can readily verify Eq. \eqref{eq:dWI_WJ}
+by a direct expansion using Eq. \eqref{eq:WI_dWJ}.
+%
+Consider a particular subset $K \subseteq I$.
+Let us compute the contribution of $\delta W_K$
+to the right-hand side of Eq. \eqref{eq:dWI_WJ}.
+%
+Note that $\delta W_K$ contributes only to those terms
+whose $J$ is a superset of $K$,
+and the contribution coefficient is $(-1)^{|I|-|J|}$.
+%
+If $K$ is strict subset of $I$,
+then there is at least one component $i^*$ that belongs to $I$
+but not to $K$,
+and all supersets, $J$'s,
+satisfying the condition given by Eq. \eqref{eq:dWI_WJ},
+$K \subseteq J \subseteq I$,
+can be partitioned to two equally populated groups,
+according to whether the $J$ has $i^*$ or not.
+%
+However, because the corresponding members of the two groups
+contribute opposite signs to the sum,
+the total contribution is zero.
+%
+This means $\delta W_K$ can contribute to the right-hand side
+if and only if $K = I$, and the contribution is $1 \cdot W_I$,
+as intended.
+
+
+%If we limit ourselves to supersets, $J$'s, of size $j$,
+%then there are
+%${|I| - |K| \choose j - |K|}$ ways
+%of including components other than those in $K$ into $J$,
+%and the total contribution is
+%$(-1)^{|I|-j} {|I| - |K| \choose j - |K|}$.
+%%
+%Summing over the possible sizes yields
+%$$
+%\sum_{j=|K|}^{|I|} (-1)^{|I|-j} {|I| - |K| \choose j - |K|}
+%= (1 - 1)^{|I| - |K|} = \delta_{|I|, |K|}.
+%$$
+%This shows that the total contribution of $\delta W_K$
+%to the right-hand side of Eq. \eqref{eq:dWI_WJ}
+%vanishes unless $K = I$,
+%which is the intended result.
+
+\bibliography{simul}
 \end{document}
